@@ -6,6 +6,7 @@ uoproxy (0.1.1) unstable; urgency=low
   * new command "%drop" which drops the item currently held
   * bugfix: serials are in network byte order
   * read equipment list from mobile_incoming packet
+  * handle container packets: open, update, content
 
  --
 
